[gd_scene load_steps=2 format=3 uid="uid://b8qt67bycs8eh"]

[ext_resource type="Script" uid="uid://bnytq407svwon" path="res://scripts/menu.gd" id="1_yqeox"]

[node name="menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 56.0
offset_bottom = 60.0
script = ExtResource("1_yqeox")

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 0
offset_left = -59.0
offset_top = -66.0
offset_right = 60.0
offset_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 0
offset_left = 3.0
offset_top = 16.0
offset_right = 116.0
offset_bottom = 129.0

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
